# python

./: Jenkinsfile
pipelinepoc/: setup.cfg  setup.py
pipelinepoc/src/aura/: add2vals.py
