[metadata]
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.txt

name =pipelinepoc_tigerfish
version = 0.0.1
author = tigerfish
author_email = tigerfish.download@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]

install_requires =
    docutils
    requests <= 0.4

package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
